# poszhalusta_primite_proekt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
res/: AuthorizationView.qml  PreferencesView.qml  PreferencesView.qmlc  TrayIcon.qml  main.qml  qml.qrc.depends  qtquickcontrols2.conf
src/: AuthorizationController.cpp  AuthorizationController.h  ConfigLoader.cpp  ConfigLoader.h  ConfigManager.cpp  ConfigManager.h  ConfigObserver.cpp  ConfigObserver.h  Configurable.cpp  Configurable.h  FileDownloader.cpp  FileDownloader.h  FileWatch.cpp  FileWatch.h  FileWatchController.cpp  FileWatchController.h  JsonReplyWrapper.cpp  JsonReplyWrapper.h  LocalSyncMaster.cpp  LocalSyncMaster.h  MainView.cpp  MainView.h  NetworkController.cpp  NetworkController.h  PathConfigLoader.cpp  PathConfigLoader.h  PreferencesController.cpp  PreferencesController.h  QOAuth2.cpp  QOAuth2.h  ReplyWrapper.cpp  ReplyWrapper.h  RestApiBase.cpp  RestApiBase.h  RestApiConfigLoader.cpp  RestApiConfigLoader.h  RestApiController.cpp  RestApiController.h  RestApiWorker.cpp  RestApiWorker.h  (+12 more)
